[package]
name = "pi_bake_software_v2"
version = "0.1.0"
authors = ["Wyatt J. Miller <wjmiller2016@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = [ "json" ] }
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
chrono = { version = "0.4.11", features = [ "serde" ] }
glob = "0.3.0"
linapi = "0.5.1"
serde = { version = "1.0.107", features = [ "derive" ] }
serde_json = "1.0.52"
serde_derive = "1.0.107"
ds18b20 = "0.1.0"
rppal = "0.11.3"